--- a/DemoPages/MainPage.xaml
+++ b/DemoPages/MainPage.xaml
@@ -1,7 +1,16 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:local="clr-namespace:DemoPages" x:Class="DemoPages.MainPage">
-    <StackLayout>
-        <!-- Place new controls here -->
-        <Label Text="Welcome to Xamarin.Forms!" HorizontalOptions="Center" VerticalOptions="CenterAndExpand" />
+     <ScrollView> 
+    <StackLayout x:Name="panel"
+                 HorizontalOptions="Center"
+                 VerticalOptions="Center">
+      
+        <Button x:Name="btn1"
+                Text="btn1"
+                Clicked="Btn1_Clicked"/>
+      
+        
+
     </StackLayout>
+        </ScrollView>
 </ContentPage>
