--- a/DemoPages/App.xaml
+++ b/DemoPages/App.xaml
@@ -1,5 +1,13 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Application xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="DemoPages.App">
     <Application.Resources>
+        <!--<ResourceDictionary>
+            <Style TargetType="Button">
+                <Setter Property="FontSize" Value="36"/>
+                <Setter Property="Margin" Value="10"/>
+                <Setter Property="BackgroundColor" Value="Blue"/>
+                
+            </Style>
+        </ResourceDictionary> -->
     </Application.Resources>
 </Application>
