--- a/DemoPages/Pagina3.xaml
+++ b/DemoPages/Pagina3.xaml
@@ -1,9 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="DemoPages.Pagina3">
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+             x:Class="DemoPages.Pagina3"
+             Title="pagina 3">
     <ContentPage.Content>
         <StackLayout>
             <Label Text="Hola Pagina 3 ">
         </Label>
+            <StackLayout Orientation="Horizontal">
+                <Button x:Name="btninicial"
+                        Text="Inicio"/>
+                <Button x:Name="btnatras"
+                        Text="Anterior"/>
+                <Button x:Name="btnmodal"
+                         Text="Siguiente"/>
+                
+            </StackLayout>
             </StackLayout>
     </ContentPage.Content>
 </ContentPage>
